--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,30 @@
 .navbar a:hover {
     opacity: 100%;
 }
+.navbar .link {
+    gap: 3rem;
+}
+.dropdown .drop-link {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: var(--white);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, .3);
+    visibility: hidden;
+}
+.click:focus-within .drop-link {
+    visibility: visible;
+}
+.dropdown .drop-link a {
+    color: #000;
+    z-index: 3;
+    opacity: 100%;
+    font-weight: 500;
+    padding: 5px 1rem;
+}
+.dropdown .drop-link a:hover {
+    background-color: var(--grey);
+}
 
 .container {
     padding: 3rem;
@@ -66,4 +90,68 @@
     padding: 20px;
     filter: drop-shadow(1px 0 15px #222);
     transition: all .5s;
+    visibility: hidden;
+}
+
+.logo-report {
+    width: 10rem;
+}
+.container-report {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 3rem;
+    gap: 3rem;
+    flex-direction: column;
+}
+
+.modal {
+    position: absolute;
+    display: none;
+    background-color: rgba(0, 0, 0, .5);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+}
+.modal .header-modal {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.modal .header-modal i {
+    cursor: pointer;
+}
+.modal form {
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    gap: 20px;
+    border-radius: 5px;
+    filter: drop-shadow(0 0 3px rgba(0,0,0,.6));
+}
+.modal form label {
+    font-weight: 500;
+}
+.modal form input {
+    width: 100%;
+    padding: 5px 10px;
+    outline: none;
+    border: 2px solid rgba(0, 0, 0, .7);
+    border-radius: 5px;
+}
+.modal form button {
+    width: 50%;
+    background-color: var(--blue);
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: 500;
+    cursor: pointer;
+    box-shadow: 0 0 2px rgba(0, 0, 0, .7);
+    padding: 5px;
 }
