--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,24 @@
     gap: 3rem;
     flex-direction: column;
 }
+.header-side {
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+.generate {
+    font-weight: 600;
+    background-color: var(--blue);
+    color: var(--white);
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+}
+.generate:hover {
+    position: relative;
+    top: -1px; left: -1px;
+    filter: drop-shadow(2px 2px 3px rgba(0,0,0,.5));
+}
 
 .modal {
     position: absolute;
